--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://medvedev245.github.io/MyPhoneBook/",
+  "homepage": "https://Medvedev245.github.io/MyPhoneBook/",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
